--- a/MonsterAPP_Storyboard_Wireframes/MonsterAPP_Storyboard_Wireframes/MainStoryboard.storyboard
+++ b/MonsterAPP_Storyboard_Wireframes/MonsterAPP_Storyboard_Wireframes/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="ugd-EL-KOj">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="ugd-EL-KOj">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -885,7 +885,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="KQC-eU-E5J" customClass="MonsterEvolutionImageView">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" id="KQC-eU-E5J" customClass="MonsterEvolutionImageView">
                                 <rect key="frame" x="20" y="138" width="291" height="199"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -946,147 +946,6 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         <image name="turtling_leftEye.png" width="31" height="30"/>
         <image name="turtling_rightEye.png" width="31" height="30"/>
     </resources>
-    <classes>
-        <class className="CompletedProjectsCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/CompletedProjectsCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="completedLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="completedMonsterProfilePic" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="completedSubtitle" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="completedTitle" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="CreateNewProjectCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/CreateNewProjectCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="createLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="starterImage" candidateClass="UIImageView"/>
-            </relationships>
-        </class>
-        <class className="EggHatchesViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/EggHatchesViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="enterNameButton:"/>
-                <relationship kind="outlet" name="hatchedHeaderLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="hatchedLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="leftEggImage" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="monsterNameField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="nameButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="rightEggImage" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="scrollViewForKeyboard" candidateClass="UIScrollView"/>
-            </relationships>
-        </class>
-        <class className="EvolutionViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/EvolutionViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="evolutionDescriptionLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="monsterImagesForAnimation" candidateClass="MonsterEvolutionImageView"/>
-                <relationship kind="outlet" name="shineForRotation" candidateClass="SparkleImageView"/>
-            </relationships>
-        </class>
-        <class className="ExistingProjectCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ExistingProjectCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="deadlineAmtType" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="deadlineIntervalType" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="deadlineReminderLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="existingTitle" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="monsterProfilePic" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="subtitle" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="LoginViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/LoginViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="loginWithButton:"/>
-                <relationship kind="outlet" name="emailField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="loginLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="nameField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="nameLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="nicknameLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="MonsterEvolutionImageView" superclassName="UIImageView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MonsterEvolutionImageView.h"/>
-        </class>
-        <class className="NewEggViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NewEggViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="achievementText" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="congratsLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="hintLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="sparkleImage" candidateClass="SparkleImageView"/>
-            </relationships>
-        </class>
-        <class className="OnboardingViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/OnboardingViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="getStartedButton:"/>
-                <relationship kind="outlet" name="doorImage" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="getStartedLabel" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="monsterImage" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="monsterPawImage" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="noteImageForButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="wormChat" candidateClass="UIImageView"/>
-            </relationships>
-        </class>
-        <class className="ProjectListViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ProjectListViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="currentHighPointMonster" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="finishedCountLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="pointCountLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="projectCountLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="projectsTableView" candidateClass="UITableView"/>
-                <relationship kind="outlet" name="staticesqueTable" candidateClass="UITableView"/>
-                <relationship kind="outlet" name="welcomeLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="ProjectNameVC" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ProjectNameVC.h"/>
-            <relationships>
-                <relationship kind="action" name="pickDateButton:"/>
-                <relationship kind="action" name="saveTaskDoneButton:"/>
-                <relationship kind="outlet" name="dateEntryField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="datePickToolbar" candidateClass="UIToolbar"/>
-                <relationship kind="outlet" name="datePicker" candidateClass="UIDatePicker"/>
-                <relationship kind="outlet" name="dueDateLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="nameLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="titleTextField" candidateClass="UITextField"/>
-            </relationships>
-        </class>
-        <class className="ProjectPickerVC" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ProjectPickerVC.h"/>
-            <relationships>
-                <relationship kind="outlet" name="projectTypesTable" candidateClass="UITableView"/>
-                <relationship kind="outlet" name="whatProjectLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="SparkleImageView" superclassName="UIImageView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SparkleImageView.h"/>
-        </class>
-        <class className="TaskListViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TaskListViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="blushedCheeksImage" candidateClass="MonsterEvolutionImageView"/>
-                <relationship kind="outlet" name="customStepTextField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="dateLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="fullMonsterImage" candidateClass="MonsterEvolutionImageView"/>
-                <relationship kind="outlet" name="hpLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="monsterEvolutionImage" candidateClass="MonsterEvolutionImageView"/>
-                <relationship kind="outlet" name="monsterLeftEyeImage" candidateClass="MonsterEvolutionImageView"/>
-                <relationship kind="outlet" name="monsterNameLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="monsterRightEyeImage" candidateClass="MonsterEvolutionImageView"/>
-                <relationship kind="outlet" name="mouthOpenImage" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="taskTable" candidateClass="UITableView"/>
-                <relationship kind="outlet" name="xpLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
